// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmploymentStatusBadge > renders an active employee as Active 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-emerald-100 text-emerald-800"
  >
    Active
  </div>
</div>
`;

exports[`EmploymentStatusBadge > renders an inactive employee as Inactive 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-slate-100 text-slate-600"
  >
    Inactive
  </div>
</div>
`;
